<resources>
    <string name="app_name">Oliva</string>
    <string name="map_api_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="search_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="nearby">Nearby</string>
    <string name="reservation">Reservations</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="create_your_account_now">create your account now</string>
    <string name="continue1">Continue</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="contact_us">Suggestions and Complaints</string>
    <string name="wait">Wait</string>
    <string name="current">Current</string>
    <string name="prev">Previous</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="next">Next</string>
    <string name="notifications">notifications</string>
    <string name="sign_up">Sign up</string>
    <string name="update">Update</string>
    <string name="please_enter_code_sent_to">please enter code sent to</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="field_required">field required</string>
    <string name="inv_email">invaled email</string>
    <string name="search">Search...</string>
    <string name="rate_app">Rate App</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="no_reservation_to_show">No reservation to show</string>
    <string name="sorry">Sorry !</string>
    <string name="no_notifications_to_show">No notifications to show</string>
    <string name="map_key" />
    <string name="filter">Filter</string>
    <string name="rating">Rating</string>
    <string name="price">Price</string>
    <string name="price2">R.S</string>
    <string name="show_results">Show results</string>
    <string name="more">More</string>
    <string name="details">Details</string>
    <string name="book_now">Book now</string>
    <string name="please_enter_the_verification_code_sent_to">Please enter the verification code sent to</string>
    <string name="user_blocked">User Blocked</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="user_found">User Found</string>
    <string name="suc">Success</string>
    <string name="all">All</string>
    <string name="no_services_to_show">No services to show</string>
    <string name="cahnge">Change</string>
    <string name="show">Show</string>
    <string name="no_search_result">No search result</string>
    <string name="offers">Offers</string>
    <string name="change">Change</string>
    <string name="cnt_book">You cannot book now</string>
    <string name="choose_language">Change language</string>
    <string name="departments">Departments</string>
    <string name="minced">Minced</string>
    <string name="otherItems">Other Items</string>
    <string name="trotters">Trotters</string>
    <string name="lambForBarbecue">Lamb prepared for barbecue</string>
    <string name="homeCooking">Home Cooking</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="WelcomeIn">Welcome in </string>
    <string name="content">The largest application for buying fresh livestock and meat in the Arabian Gulf</string>
    <string name="best">The Best</string>
    <string name="bestSeller">Best Seller</string>
    <string name="fresh">Fresh</string>
    <string name="wallet">Wallet</string>
    <string name="yourBalance">Your Balance</string>
    <string name="shareContent">Share the app to get extra credit that you_can_use </string>
    <string name="to_buy">to buy from our store</string>
    <string name="shareContent1">Share the app to get extra credit that you_can_use to buy from our store</string>

    <string name="shareNow">Share now</string>
    <string name="purchaseGifts">Purchase gifts</string>
    <string name="share">Share</string>
    <string name="cart">Cart</string>
    <string name="favourite">Favourite</string>
    <string name="myOrders">My Orders</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="order_num">Order Number :</string>
    <string name="show_detials">Show Detials</string>
    <string name="order_status">Order Status : </string>
    <string name="order_sent">Order Sent</string>
    <string name="preparing">Preparing</string>
    <string name="delivered_to_the_delegate">Delivered to the Delegate</string>
    <string name="delivery_in_progress">Delivery in progress</string>
    <string name="end">End</string>
    <string name="order_detials">Order Detials</string>
    <string name="shareApp">Share App</string>
    <string name="scanCode">Scan the code</string>
    <string name="or">OR</string>
    <string name="clickShare">Click to share</string>
    <string name="hi">Hi</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_code">Enter Code</string>
    <string name="login2">Login</string>
    <string name="invited_by_a_user">Invited by a user?</string>
    <string name="personal_information">Personal Information</string>
    <string name="no_department_to_show">No Department To Show</string>
    <string name="no_offer_to_show">No Offer To Show</string>
    <string name="product_detials">Product Detials</string>
    <string name="choose_age">Choose Age : </string>
    <string name="choose_sizes">Choose Sizes :</string>
    <string name="slicing_method">Slicing Method:</string>
    <string name="packaging_method">Packaging Method :</string>
    <string name="free">Free</string>
    <string name="total">Total :</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="ch_size">Choose Size</string>
    <string name="suc_add_to_cart">Sucess Add To Cart</string>
    <string name="pay">Pay</string>
    <string name="products">Products </string>
    <string name="shipping_site">Delivery site</string>
    <string name="payment">Payment</string>
    <string name="electronic_payment">Electronic Payment</string>
    <string name="cash">Cash</string>
    <string name="total_cart">Total Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="total_payments">total_pay</string>
    <string name="app_link">App Link : </string>
    <string name="wallet_not">The wallet balance is not enough</string>
    <string name="language_setting">Language Setting</string>
    <string name="latest_products">Latest Products</string>
    <string name="my_profile">My Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="previous_order">Previous Order</string>
    <string name="branches">Branches</string>
    <string name="delivery_available">Delivery available</string>
    <string name="un_delivery_available">Un Delivery available</string>
    <string name="filter_result">Filter Results</string>
    <string name="department">Department</string>
    <string name="reset">Reset</string>
    <string name="activation">Activation</string>
    <string name="edit">Edit</string>
    <string name="bill">Bill</string>
    <string name="write_note">Write Note : </string>
    <string name="write_here">Write Here</string>
    <string name="latest_offers">Latest Offers</string>
    <string name="delivery_from_another_branch">Delivery From Another Branch</string>
    <string name="receipt_from_the_branch">Receipt From The Branch</string>
    <string name="your_request_has_been_successfully_sent">Your Request Has Been Successfully Sent</string>
    <string name="delivery_to">Delivery to :</string>
    <string name="m">KM</string>
    <string name="ch_branch">Choose Branch</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="order_tax">Order Tax</string>


</resources>