<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".uis.activity_intro_slider.IntroSliderActivity">


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <FrameLayout
            android:id="@+id/flData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    app:tabBackground="@drawable/tab_intro_slider"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp"
                    app:tabMaxWidth="15dp"
                    app:tabMode="scrollable" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/WelcomeIn"
                        android:textColor="@color/gray1"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/color2"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/content"
                    android:textColor="@color/gray1"
                    android:textSize="15sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <Button
                        android:id="@+id/btnSkip"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_transparent"
                        android:gravity="center"
                        android:text="@string/skip"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:visibility="visible"
                        tools:ignore="RtlCompat" />

                    <Button
                        android:id="@+id/btnStart"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/btn_shape"
                        android:text="@string/start"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:visibility="invisible" />

                    <Button
                        android:id="@+id/btnNext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_shape"
                        android:gravity="center"
                        android:text="@string/next"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:visibility="visible"
                        tools:ignore="RtlCompat" />
                </LinearLayout>

            </LinearLayout>
        </FrameLayout>


    </LinearLayout>
</layout>