<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />

        <variable
            name="title"
            type="String" />


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color6"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="30dp"

                app:cardBackgroundColor="@color/white">

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="30dp">


                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/llBack"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="start"
                            app:cardBackgroundColor="@color/gray23"
                            app:cardCornerRadius="10dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="5dp"
                                android:rotation='@{lang.equals("en")?180:0}'
                                android:src="@drawable/ic_left" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/cart"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.appcompat.widget.Toolbar>
            </androidx.cardview.widget.CardView>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="70dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    />

                <LinearLayout
                    android:id="@+id/llEmptyCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_cart" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/no_data_to_show"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/flTotal"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="bottom"
                android:background="@drawable/top_small_stroke_white_gray">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:paddingLeft="3dp"
                            android:paddingRight="3dp"
                            android:text="@string/total"
                            android:textColor="@color/gray21"
                            android:textSize="16sp"


                            />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:orientation="horizontal">


                            <TextView
                                android:id="@+id/tvTotal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:paddingLeft="3dp"
                                android:paddingRight="3dp"
                                android:textColor="@color/color9"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:paddingLeft="3dp"
                                android:paddingRight="3dp"
                                android:text="@string/price2"

                                android:textColor="@color/color9"
                                android:textSize="16sp"

                                />
                        </LinearLayout>
                    </LinearLayout>


                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btBuy"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:background="@drawable/rounded_primary"
                        android:padding="3dp"
                        android:text="@string/pay"
                        android:textColor="@color/white" />
                </LinearLayout>
            </FrameLayout>


        </FrameLayout>
    </LinearLayout>


</layout>
